Fixing textboxes are take more space on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,9 @@ a {
     border-radius: 1rem;
 }
 
-
+.textbox-left {
+    flex: 1 1 50%;
+}
 
 @media (max-width: 1100px)
  {
